# protocol-cspr

./: .gitignore  .prettierrc  Cargo.toml  Odra.toml  README.md  package-lock.json  package.json  tests.sh  wasm-build.sh
.github/workflows/: test.yml
casper-js-sdk/: package-lock.json  package.json
casper-js-sdk/.github/ISSUE_TEMPLATE/: bug_report.md
casper-js-sdk/src/lib/: Contracts.test.ts  Contracts.ts  Serialization.test.ts  SignedMessage.ts  StoredValue.ts  index.ts
casper-js-sdk/src/services/: CasperServiceByJsonRPC.ts
clamm-wasm/: Cargo.toml  clamm.rs  consts.rs  custom.rs  helpers.rs  lib.rs  log.rs  math.rs
clamm-wasm/storage/: errors.rs  events.rs  fee_tier.rs  invariant_config.rs  pool.rs  pool_key.rs  position.rs  tick.rs
clamm-wasm/types/: fee_growth.rs  fixed_point.rs  liquidity.rs  percentage.rs  price.rs  seconds_per_liquidity.rs  sqrt_price.rs  token_amount.rs
clamm-wasm/wasm_wrapper/: Cargo.toml
clamm-wasm/wasm_wrapper/src/: export.rs
invariant-cspr-wasm/: index_bg.js  index_bg.wasm.d.ts
query-service/: .env  Cargo.toml  Odra.toml  lib.rs  structs.rs
resources/: invariant_schema.json
sdk/: .gitignore  .mocharc.json  README.md  build.sh  jest.config.js  package-lock.json  package.json  tests.sh  tsconfig.json
sdk-test/: index.cjs  index.js  package-lock.json  package.json  test.sh  tsconfig.json
sdk-usage/: package-lock.json  package.json  test.sh
sdk-usage/src/: index.ts
sdk/casper-js-sdk/: package.json
sdk/casper-js-sdk-2.15.3/: package-lock.json
sdk/casper_keys/: private_key.pem  public_key.pem
sdk/contracts/: erc20.wasm  invariant.wasm
sdk/invariant-cspr-wasm/: index.d.ts  index.js  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
sdk/scripts/: Cargo.toml  call.sh
sdk/scripts/src/: main.rs
sdk/src/: client.ts  consts.ts  decoder.ts  enums.ts  erc20.ts  index.ts  invariant.ts  network.ts  parser.ts  schema.ts  testUtils.ts  utils.ts  wasm.ts
sdk/src/contracts/: erc20.wasm  invariant.wasm  token.wasm
sdk/tests/: erc20.test.ts  example.test.ts  invariant.test.ts  math.test.ts  position.test.ts  protocol-fee.test.ts  utils.test.ts
sdk/wasm/: index.js  index_bg.js
src/: erc20.rs  lib.rs  math.rs  token.rs  utils.rs
src/contracts/: entrypoints.rs  errors.rs  events.rs  mod.rs
src/contracts/collections/: fee_tiers.rs  mod.rs  pool_keys.rs  pools.rs  positions.rs  ticks.rs
src/contracts/logic/: math.rs
src/contracts/storage/: fee_tier.rs  invariant_config.rs  mod.rs  oracle.rs  pool.rs  pool_key.rs  position.rs  state.rs  tick.rs  tickmap.rs
src/decimal/: Cargo.toml
src/decimal/decimal_core/src/: base.rs  big_ops.rs  by_number.rs  checked_ops.rs  factories.rs  lib.rs
src/decimal/src/: lib.rs  traits.rs  uint.rs
src/e2e/: add_fee_tier.rs  change_fee_receiver.rs  change_protocol_fee.rs  claim.rs  create_pool.rs  cross.rs  cross_both_side.rs  interaction_with_pool_on_removed_fee_tier.rs  limits.rs  liquidity_gap.rs  max_tick_cross.rs  mod.rs  multiple_swap.rs  position.rs  position_list.rs  position_slippage.rs  protocol_fee.rs  remove_fee_tier.rs  slippage.rs  snippets.rs  swap.rs
src/e2e/base/: add_fee_tier.rs  change_fee_receiver.rs  change_protocol_fee.rs  claim.rs  constructor.rs  create_pool.rs  cross.rs  cross_both_side.rs  interaction_with_pool_on_removed_fee_tier.rs  limits.rs  liquidity_gap.rs  mod.rs  multiple_swap.rs  position.rs  position_list.rs  position_slippage.rs  protocol_fee.rs  remove_fee_tier.rs  slippage.rs  swap.rs  swap_route.rs
src/e2e/time_consuming/: max_tick_cross.rs  mod.rs
src/math/: Cargo.toml  clamm.rs  consts.rs  lib.rs  log.rs  math.rs  mod.rs  uints.rs
src/math/types/: fee_growth.rs  fixed_point.rs  liquidity.rs  mod.rs  percentage.rs  seconds_per_liquidity.rs  sqrt_price.rs  test.rs  token_amount.rs
src/math/types/sqrt_price/: log.rs  sqrt_price.rs
src/token/: Cargo.toml  Odra.toml  README.md
src/token/resources/: token_schema.json
src/token/src/: lib.rs
src/types/: liquidity.rs
src/types/sqrt_price/: mod.rs  sqrt_price.rs
