[package]
name = "invariant"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { git = "https://github.com/odradev/odra.git", branch = "release/0.7.0", default-features = false }
odra-modules = { git = "https://github.com/odradev/odra.git", branch = "release/0.7.0", default-features = false }
invariant_math = { path = "src/math", default-features = false}
decimal = { path = "src/decimal", default-features = false}
traceable_result = { path = "src/traceable_result", default-features = false}

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm", "odra-modules/mock-vm"]
casper = ["odra/casper", "odra-modules/casper"]
