[package]
name = "invariant"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { git = "https://github.com/odradev/odra.git", branch = "release/0.7.1", default-features = false, features = ["std"] }
odra-modules = { git = "https://github.com/odradev/odra.git", branch = "release/0.7.1", default-features = false, features = ["std"]}
decimal = { path = "src/decimal" }
traceable_result = { path = "src/traceable_result" }
uint = { version = "0.9", default-features = false }
borsh = { version = "0.9.3", default-features = false }

wasm-bindgen = {version = "0.2.89", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde-wasm-bindgen = { version = "0.6.3", default-features = false }
tsify = { version = "0.4.5", default-features = false }
paste = { version = "1.0.14", default-features = false }
js-sys = { version = "0.3.66", default-features = false }


[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm", "odra-modules/mock-vm"]
casper = ["odra/casper", "odra-modules/casper"]
time-consuming-e2e = []
base-e2e = []