[package]
name = "query-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# odra = { version = "0.4.0", default-features = false }
# odra-modules = { version = "0.4.0", default-features = false }
odra = { git = "https://github.com/odradev/odra.git", branch = "release/0.7.1", default-features = false }
odra-modules = { git = "https://github.com/odradev/odra.git", branch = "release/0.7.1", default-features = false }
invariant = { path = "../", features=["casper-livenet"], default-features = false}
# actix-web = "4"
# actix-cors = "0.6.4"
serde_json = "1.0.103"
serde = "1.0.171"

[features]
default = ["casper-livenet"]
casper-livenet = ["odra/casper-livenet", "odra-modules/casper-livenet"]

[[bin]]
name = "query-service"
path = "./bin/query-service.rs"
required-features = ["casper-livenet"]
test = false