[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
odra = { git = "https://github.com/odradev/odra.git", branch = "release/0.7.1", default-features = false }
odra-modules = { git = "https://github.com/odradev/odra.git", branch = "release/0.7.1", default-features = false }


[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm", "odra-modules/mock-vm"]
casper = ["odra/casper", "odra-modules/casper"]
time-consuming-e2e = []
base-e2e = []

