[package]
name = "invariant_math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
odra = { version = "*" , default-features = false }
odra-modules = { version = "*" , default-features = false }
decimal = { path = "../decimal" }
traceable_result = { path = "../traceable_result" }
uint = { version = "0.9", default-features = false }
borsh = { version = "0.9.3", default-features = false }


[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm", "odra-modules/mock-vm"]
casper = ["odra/casper", "odra-modules/casper"]
odra-as-dependency = []
odra-modules-as-dependency = []